# ConceptReviewTool

./: .gitignore  .replit  README.md  database.py  main.py  models.py  pyproject.toml  replit.md  schemas.py
agents/: __init__.py  baseline_kpi_agent.py  concept_note_agent.py  concept_review_orchestrator.py  financial_structuring_agent.py  gap_analysis_agent.py  need_assessment_agent.py  sector_profile_agent.py  sustainability_agent.py
attached_assets/: Pasted--Master-Prompt-for-Replit-Concept-Review-Tool-EBRD-Kenya-Example-You-are-an-expert-full-stac-1764654039581_1764654039582.txt  Pasted--Prompt-for-Replit-Add-Document-Upload-Parsing-You-are-an-expert-full-stack-Python-FastAPI-deve-1764657202558_1764657202559.txt  Pasted--Replit-Prompt-Auto-Run-Current-Phase-on-Page-Load-Butt_1764672200853.txt  Pasted--Replit-Prompt-Clean-Instrument-Names-Review-Approve-Sc_1764662440172.txt  Pasted--Replit-Prompt-Email-First-Intake-Background-Agents-Visible-Thinking-Local-Runnable-I-alrea-1764659305712_1764659305712.txt  Pasted--Replit-Prompt-Interleaved-Thinking-Outputs-Collapsible_1764673950418.txt  Pasted--Replit-Prompt-Keep-Reset-All-Phases-on-Case-Overview-Y_1764675231478.txt  Pasted--Replit-Prompt-Make-Agent-Thinking-Stream-Step-by-Step-_1764669350497.txt  Pasted--Replit-Prompt-Make-All-Sources-Proper-Websites-No-Inte_1764674822105.txt  Pasted--Replit-Prompt-Multi-Phase-Agent-Flow-Better-UI-UX-I-al_1764667774452.txt  Pasted--Replit-Prompt-Refactor-to-3-Screen-Flow-Intake-Case-Se_1767945501661.txt  Pasted--Replit-Prompt-Richer-Agent-Thinking-Handling-0-N-A-Val_1764664267472.txt  (+4 more)
(+19 files in other folders)
